# harness-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: post-commit  pre-commit  pre-push
.github/workflows/: tests.yml
docs/: evolution-log.md
docs/engineering/: README.md  architecture.md  init-workflow.md  llm-contracts.md  sensor-and-gate-rules.md  testing-strategy.md
docs/ideas/: README.md  observable-harness-generation.md  observable-harness-runtime-workflow.md  weapon-library-floor-and-llm-enhancement.md  wizard-style-human-confirmation.md
docs/plans/: 2026-05-25-poc-implementation-plan.md  2026-05-25-scanner-refactor-plan.md  2026-05-25-scanner-refactor-v2-part2.md  2026-05-25-scanner-refactor-v2.md  2026-05-25-scanner-skill-implementation-plan.md  2026-05-25-scanner-skill-requirements.md
docs/research/: 2026-05-30-jiuwenswarm-auto-harness-research.md  scanner-smoke-test-results.md  scanner-v2-smoke-test.md  target-repositories.md
docs/specs/: POC-scanner-skill-design.md  scanner-output-contract.md
docs/strategy/: Harness Builder — Agent POC计划.md  Harness Builder — 面向遗留代码库治理的 AI Coding Harness 生成器.md  README.md  goal-mode-playbook.md  init-north-star.md
docs/todos/: README.md  archive.md  asset-writer-refactor.md  benchmark-quality-scoring.md  (+13 more)
scripts/: check-ci.sh  install-git-hooks.sh  lib-test-env.sh  test-acceptance-llm-smoke.sh  test-acceptance-real-repo.sh  test-acceptance-self-improve.sh  test-acceptance.sh  test-fast.sh  test-full.sh  test-guided-init.sh  test-integration.sh  test-llm-contracts.sh  test-unit.sh
(+612 files in other folders)
