[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-builder"
version = "0.1.0"
description = "Harness Builder Scanner and Agent POC"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.13",
  "PyYAML>=6.0",
  "typer>=0.26",
]

[project.optional-dependencies]
test = ["pytest>=9.0"]
dev = ["pytest>=9.0"]

[project.scripts]
harness-builder-agent = "harness_builder_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["harness_builder_agent*", "harness_builder*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
harness_builder_agent = ["templates/skills/*/SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
